--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -29,21 +29,6 @@
     .green{background:radial-gradient(circle at 30% 25%, #86efac, #22c55e 45%, #14532d)}
     .blue{background:radial-gradient(circle at 30% 25%, #93c5fd, #3b82f6 45%, #1e3a8a)}
 
-    .quallyRed{
-      background:radial-gradient(circle at 30% 25%, #ff7a7a, #ef4444 45%, #7f1d1d);
-      color:#fff;
-    }
-    .quallySilver{
-      background:radial-gradient(circle at 30% 25%, #f3f4f6, #9ca3af 45%, #4b5563);
-      color:#fff;
-      text-shadow:0 2px 10px rgba(0,0,0,.35);
-    }
-    .quallyWhite{
-      background:radial-gradient(circle at 30% 25%, #ffffff, #e5e7eb 55%, #9ca3af);
-      color:#111827;
-      text-shadow:none;
-    }
-
     .rowSmall{margin-top:16px}
     .smallCircle{width:190px;height:190px;font-size:15px;padding:14px}
 
@@ -164,7 +149,7 @@
     .itemName{font-weight:1000}
     .itemTime{opacity:.8}
 
-    /* ✅ NEW: Broadcast message composer */
+    /* Broadcast */
     .msgRow{display:flex;gap:10px;flex-wrap:wrap;align-items:flex-start}
     .msgBox{
       flex: 1 1 420px;
@@ -182,6 +167,47 @@
       line-height:1.25;
     }
     .msgHelp{margin-top:8px;opacity:.8;font-size:12px;font-family: ui-monospace, Menlo, Consolas, monospace;}
+
+    /* ✅ NEW: Quali split scheduler */
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:10px;
+    }
+    .rowLine{
+      display:grid;
+      grid-template-columns: 18px 110px 1fr 120px;
+      gap:10px;
+      align-items:center;
+      padding:10px;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,.14);
+      background:rgba(0,0,0,.18);
+      font-family: ui-monospace, Menlo, Consolas, monospace;
+      font-size:12.5px;
+    }
+    .rowLine label{font-weight:1000}
+    .rowLine input[type="number"], .rowLine select{
+      padding:9px 10px;
+      border-radius:10px;
+      border:1px solid rgba(255,255,255,.18);
+      background:rgba(0,0,0,.25);
+      color:#fff;
+      outline:none;
+      font-family: ui-monospace, Menlo, Consolas, monospace;
+      font-size:12.5px;
+    }
+    .muted{opacity:.8;font-size:12px;font-family: ui-monospace, Menlo, Consolas, monospace;}
+    .warnBox{
+      margin-top:10px;
+      padding:10px 12px;
+      border-radius:12px;
+      border:1px solid rgba(245,158,11,.35);
+      background:rgba(245,158,11,.10);
+      font-family: ui-monospace, Menlo, Consolas, monospace;
+      font-size:12.5px;
+      opacity:.95;
+    }
   </style>
 </head>
 <body>
@@ -240,21 +266,6 @@
           <span>SYSTEM LIVE</span>
         </div>
       </button>
-
-      <button class="quallyRed smallCircle" id="btnQBeginner">
-        QUALI SPLIT<br><br>
-        BEGINNER
-      </button>
-
-      <button class="quallySilver smallCircle" id="btnQAms">
-        QUALI SPLIT<br><br>
-        AMS
-      </button>
-
-      <button class="quallyWhite smallCircle" id="btnQPros">
-        QUALI SPLIT<br><br>
-        PROS
-      </button>
     </div>
 
     <div class="minirow">
@@ -279,7 +290,6 @@
       </ul>
     </div>
 
-    <!-- ✅ NEW: Broadcast panel -->
     <div class="panel">
       <div class="panelHeader">
         <div class="panelTitle">SEND MESSAGE TO ALL DRIVERS (shows 20s)</div>
@@ -287,13 +297,81 @@
           <button class="tinyBtn" id="btnSendBroadcast">Send message</button>
         </div>
       </div>
-
       <div class="msgRow">
         <textarea id="broadcastText" class="msgBox" maxlength="220"
           placeholder="Type message here… (e.g. Please hold position at pit exit, stewards reviewing incident)"></textarea>
       </div>
-      <div class="msgHelp">
-        Tip: keep it short. Message appears on SimHub overlay for 20 seconds, then disappears automatically.
+      <div class="msgHelp">Tip: Ctrl+Enter sends. Message disappears automatically after 20 seconds.</div>
+    </div>
+
+    <!-- ✅ NEW: Quali Split Scheduler -->
+    <div class="panel">
+      <div class="panelHeader">
+        <div class="panelTitle">QUALI SPLIT SCHEDULER (1–3 splits, seamless rotation)</div>
+        <div class="panelBtns">
+          <button class="tinyBtn" id="btnStartQuali">Start Quali Splits</button>
+          <button class="tinyBtn danger" id="btnStopQuali">Stop Quali Splits</button>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="rowLine">
+          <input type="checkbox" id="enBeginner" checked />
+          <label for="enBeginner">BEGINNER</label>
+          <div>
+            <div class="muted">Duration (minutes)</div>
+            <input id="minBeginner" type="number" min="1" max="60" step="1" value="4" />
+          </div>
+          <div>
+            <div class="muted">Order</div>
+            <select id="ordBeginner">
+              <option value="1" selected>1st</option>
+              <option value="2">2nd</option>
+              <option value="3">3rd</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="rowLine">
+          <input type="checkbox" id="enAms" checked />
+          <label for="enAms">AMS</label>
+          <div>
+            <div class="muted">Duration (minutes)</div>
+            <input id="minAms" type="number" min="1" max="60" step="1" value="2" />
+          </div>
+          <div>
+            <div class="muted">Order</div>
+            <select id="ordAms">
+              <option value="0">—</option>
+              <option value="1">1st</option>
+              <option value="2" selected>2nd</option>
+              <option value="3">3rd</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="rowLine">
+          <input type="checkbox" id="enPros" checked />
+          <label for="enPros">PROS</label>
+          <div>
+            <div class="muted">Duration (minutes)</div>
+            <input id="minPros" type="number" min="1" max="60" step="1" value="1" />
+          </div>
+          <div>
+            <div class="muted">Order</div>
+            <select id="ordPros">
+              <option value="0">—</option>
+              <option value="1">1st</option>
+              <option value="2">2nd</option>
+              <option value="3" selected>3rd</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="warnBox" id="qualiHint">
+        Rule: tick the splits you need, set minutes, and choose unique orders starting at 1 (e.g. 1–2 or 1–2–3).  
+        If you only want 1 split, set just one split to order 1 and disable the rest.
       </div>
     </div>
 
@@ -305,7 +383,6 @@
     const WORKER_BASE = "https://ifwl-flag.benjamin-leahy1.workers.dev";
     const TOKEN_KEY = "ifwl_racecontrol_token_v1";
     const POLL_MS = 1000;
-
     const CHECKIN_REFRESH_MS = 4000;
 
     const statusEl = document.getElementById("status");
@@ -327,13 +404,26 @@
     const btnClearCheckins = document.getElementById("btnClearCheckins");
 
     const btnGreenConsole = document.getElementById("btnGreenConsole");
-    const btnQBeginner = document.getElementById("btnQBeginner");
-    const btnQAms = document.getElementById("btnQAms");
-    const btnQPros = document.getElementById("btnQPros");
 
-    // ✅ NEW broadcast elements
+    // Broadcast
     const broadcastText = document.getElementById("broadcastText");
     const btnSendBroadcast = document.getElementById("btnSendBroadcast");
+
+    // Quali scheduler controls
+    const btnStartQuali = document.getElementById("btnStartQuali");
+    const btnStopQuali = document.getElementById("btnStopQuali");
+
+    const enBeginner = document.getElementById("enBeginner");
+    const enAms = document.getElementById("enAms");
+    const enPros = document.getElementById("enPros");
+
+    const minBeginner = document.getElementById("minBeginner");
+    const minAms = document.getElementById("minAms");
+    const minPros = document.getElementById("minPros");
+
+    const ordBeginner = document.getElementById("ordBeginner");
+    const ordAms = document.getElementById("ordAms");
+    const ordPros = document.getElementById("ordPros");
 
     const buttons = [
       document.getElementById("btnRed"),
@@ -343,9 +433,9 @@
       document.getElementById("btnReset"),
       document.getElementById("btnCheckIn"),
       btnGreenConsole,
-      btnQBeginner,
-      btnQAms,
-      btnQPros
+      btnSendBroadcast,
+      btnStartQuali,
+      btnStopQuali
     ];
 
     endpointPill.textContent = `Endpoint: ${WORKER_BASE}`;
@@ -359,7 +449,6 @@
       for(const b of buttons) b.disabled = isBusy;
       btnRefreshCheckins.disabled = isBusy;
       btnClearCheckins.disabled = isBusy;
-      btnSendBroadcast.disabled = isBusy;
     }
 
     function setLive(ok, detail=""){
@@ -410,39 +499,43 @@
       return res.json();
     }
 
-    async function setState(state){
+    async function postAuthed(path, payload){
       const token = getToken();
       if(!token){
         statusEl.textContent =
           "ERROR — Missing token.\n\n" +
           "Enter the steward token at the top of the page and click 'Save token'.";
-        return;
+        throw new Error("missing_token");
       }
 
+      const res = await fetch(`${WORKER_BASE}${path}`,{
+        method:"POST",
+        mode:"cors",
+        cache:"no-store",
+        headers:{
+          "Content-Type":"application/json",
+          "x-auth": token
+        },
+        body: JSON.stringify(payload || {})
+      });
+
+      const text = await res.text();
+      let data = {};
+      try { data = text ? JSON.parse(text) : {}; } catch { data = { raw: text }; }
+
+      if(!res.ok){
+        throw new Error(data?.detail || data?.error || `HTTP ${res.status} — ${text || "no body"}`);
+      }
+      return data;
+    }
+
+    async function setState(state){
       setBusy(true);
       statusEl.textContent = `Sending "${state}"…`;
       let postOk = false;
 
       try{
-        const res = await fetch(`${WORKER_BASE}/set`,{
-          method:"POST",
-          mode:"cors",
-          cache:"no-store",
-          headers:{
-            "Content-Type":"application/json",
-            "x-auth": token
-          },
-          body: JSON.stringify({ state })
-        });
-
-        const text = await res.text();
-        let data = {};
-        try { data = text ? JSON.parse(text) : {}; } catch { data = { raw: text }; }
-
-        if(!res.ok){
-          throw new Error(data?.detail || data?.error || `HTTP ${res.status} — ${text || "no body"}`);
-        }
-
+        const data = await postAuthed("/set", { state });
         postOk = true;
         const shown = modeFrom(data);
         statusEl.textContent = `OK — "${shown}" @ ${fmt(data.updatedAt)}`;
@@ -471,20 +564,10 @@
       }
     }
 
-    // ✅ NEW: broadcast message
-    function normMsg(v){
-      return String(v || "").replace(/\s+/g, " ").trim();
-    }
+    // Broadcast
+    function normMsg(v){ return String(v || "").replace(/\s+/g, " ").trim(); }
 
     async function sendBroadcast(){
-      const token = getToken();
-      if(!token){
-        statusEl.textContent =
-          "ERROR — Missing token.\n\n" +
-          "Enter the steward token at the top of the page and click 'Save token'.";
-        return;
-      }
-
       const msg = normMsg(broadcastText.value);
       if(!msg){
         statusEl.textContent = "ERROR — Type a message first.";
@@ -496,25 +579,7 @@
       statusEl.textContent = "Sending message to all drivers (20s)…";
 
       try{
-        const res = await fetch(`${WORKER_BASE}/broadcast`,{
-          method:"POST",
-          mode:"cors",
-          cache:"no-store",
-          headers:{
-            "Content-Type":"application/json",
-            "x-auth": token
-          },
-          body: JSON.stringify({ message: msg })
-        });
-
-        const text = await res.text();
-        let data = {};
-        try { data = text ? JSON.parse(text) : {}; } catch { data = { raw: text }; }
-
-        if(!res.ok){
-          throw new Error(data?.detail || data?.error || `HTTP ${res.status} — ${text || "no body"}`);
-        }
-
+        await postAuthed("/broadcast", { message: msg });
         broadcastText.value = "";
         statusEl.textContent = `OK — Message sent @ ${fmt(Date.now())}`;
       }catch(e){
@@ -524,7 +589,121 @@
       }
     }
 
-    // ---- Check-ins (unchanged) ----
+    // Quali scheduler
+    function getIntMinutes(inp){
+      const n = Number(inp.value);
+      if(!Number.isFinite(n)) return null;
+      const i = Math.round(n);
+      if(i < 1 || i > 60) return null;
+      return i;
+    }
+
+    function buildQualiSteps(){
+      const candidates = [
+        {
+          key:"beginner",
+          label:"BEGINNER",
+          enabled: !!enBeginner.checked,
+          minutes: getIntMinutes(minBeginner),
+          order: Number(ordBeginner.value || 0),
+          style: { bg:"#b30000", fg:"#ffffff", dot:"red" }
+        },
+        {
+          key:"ams",
+          label:"AMS",
+          enabled: !!enAms.checked,
+          minutes: getIntMinutes(minAms),
+          order: Number(ordAms.value || 0),
+          style: { bg:"#9ca3af", fg:"#ffffff", dot:"silver" }
+        },
+        {
+          key:"pros",
+          label:"PROS",
+          enabled: !!enPros.checked,
+          minutes: getIntMinutes(minPros),
+          order: Number(ordPros.value || 0),
+          style: { bg:"#ffffff", fg:"#111827", dot:"black" }
+        }
+      ];
+
+      const enabled = candidates.filter(x => x.enabled);
+
+      if(enabled.length === 0){
+        return { error: "Select at least 1 split." };
+      }
+
+      for(const s of enabled){
+        if(!s.minutes){
+          return { error: `${s.label}: minutes must be 1–60.` };
+        }
+        if(!s.order || s.order < 1 || s.order > 3){
+          return { error: `${s.label}: set an order (1st/2nd/3rd).` };
+        }
+      }
+
+      // Orders must be unique and sequential from 1..N
+      const orders = enabled.map(x => x.order);
+      const uniq = new Set(orders);
+      if(uniq.size !== orders.length){
+        return { error: "Orders must be unique (no duplicates)." };
+      }
+
+      const sortedOrders = [...orders].sort((a,b)=>a-b);
+      const N = enabled.length;
+      for(let i=0;i<N;i++){
+        if(sortedOrders[i] !== (i+1)){
+          return { error: `Orders must start at 1 and run sequentially (1..${N}).` };
+        }
+      }
+
+      const steps = enabled
+        .sort((a,b)=>a.order-b.order)
+        .map(s => ({
+          key: s.key,
+          label: s.label,
+          minutes: s.minutes,
+          bg: s.style.bg,
+          fg: s.style.fg,
+          dot: s.style.dot
+        }));
+
+      return { steps };
+    }
+
+    async function startQuali(){
+      const built = buildQualiSteps();
+      if(built.error){
+        statusEl.textContent = `ERROR — ${built.error}`;
+        return;
+      }
+
+      setBusy(true);
+      statusEl.textContent = "Starting quali split schedule…";
+
+      try{
+        const data = await postAuthed("/quali_schedule", { steps: built.steps });
+        statusEl.textContent = `OK — Quali schedule started @ ${fmt(data?.qualiSchedule?.startAt || Date.now())}`;
+      }catch(e){
+        statusEl.textContent = `ERROR — Could not start quali schedule: ${e.message}`;
+      }finally{
+        setBusy(false);
+      }
+    }
+
+    async function stopQuali(){
+      setBusy(true);
+      statusEl.textContent = "Stopping quali split schedule…";
+      try{
+        await postAuthed("/quali_schedule/stop", { ok:true });
+        statusEl.textContent = `OK — Quali schedule stopped @ ${fmt(Date.now())}`;
+      }catch(e){
+        statusEl.textContent = `ERROR — Could not stop quali schedule: ${e.message}`;
+      }finally{
+        setBusy(false);
+      }
+    }
+
+    // Check-ins
     function normName(v){ return String(v || "").trim().replace(/\s+/g, " "); }
 
     function escapeHtml(s){
@@ -567,39 +746,13 @@
     }
 
     async function clearAllCheckins(){
-      const token = getToken();
-      if(!token){
-        statusEl.textContent =
-          "ERROR — Missing token.\n\n" +
-          "Enter the steward token at the top of the page and click 'Save token'.";
-        return;
-      }
-
       if(!confirm("Clear ALL check-ins?")) return;
 
       setBusy(true);
       statusEl.textContent = "Clearing all check-ins…";
 
       try{
-        const res = await fetch(`${WORKER_BASE}/checkins/clear`,{
-          method:"POST",
-          mode:"cors",
-          cache:"no-store",
-          headers:{
-            "Content-Type":"application/json",
-            "x-auth": token
-          },
-          body: JSON.stringify({ ok:true })
-        });
-
-        const text = await res.text();
-        let data = {};
-        try { data = text ? JSON.parse(text) : {}; } catch { data = { raw: text }; }
-
-        if(!res.ok){
-          throw new Error(data?.detail || data?.error || `HTTP ${res.status} — ${text || "no body"}`);
-        }
-
+        await postAuthed("/checkins/clear", { ok:true });
         statusEl.textContent = `OK — Cleared check-ins @ ${fmt(Date.now())}`;
         await refreshCheckins(false);
       }catch(e){
@@ -624,26 +777,23 @@
     document.getElementById("btnReset").addEventListener("click", ()=>setState("server_reset"));
 
     btnGreenConsole.addEventListener("click", ()=>setState("green_console"));
-    btnQBeginner.addEventListener("click", ()=>setState("qually_beginner"));
-    btnQAms.addEventListener("click", ()=>setState("qually_ams"));
-    btnQPros.addEventListener("click", ()=>setState("qually_pros"));
 
     btnCheckIn.addEventListener("click", async () => {
       await setState("race_checkin");
       burstRefreshCheckins();
     });
 
-    // ✅ NEW: send broadcast button
     btnSendBroadcast.addEventListener("click", sendBroadcast);
     broadcastText.addEventListener("keydown", (e) => {
-      // Ctrl+Enter to send quickly
       if((e.ctrlKey || e.metaKey) && e.key === "Enter"){
         e.preventDefault();
         sendBroadcast();
       }
     });
 
-    // Check-in panel buttons
+    btnStartQuali.addEventListener("click", startQuali);
+    btnStopQuali.addEventListener("click", stopQuali);
+
     btnRefreshCheckins.addEventListener("click", () => refreshCheckins(true));
     btnClearCheckins.addEventListener("click", clearAllCheckins);
 
